// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box demo examples basic 1`] = `
.css-0,
[data-css-1]::after,
.css-1[data-simulate-after],
[data-css-1][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.css-1 > *:not(:last-child),
[data-css-1] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.css-4,
[data-css-4] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5,
[data-css-5] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5 *,
[data-css-5] *,
.css-5 *::before,
[data-css-5] *::before,
.css-5 *::after,
[data-css-5] *::after {
  box-sizing: inherit;
}

.css-6,
[data-css-6] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  position: relative;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-6::before,
[data-css-6]::before,
.css-6[data-simulate-before],
[data-css-6][data-simulate-before] {
  border-color: rgba(207,224,252,0.5);
  border-style: solid;
  border-width: 1.5em;
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.css-10,
[data-css-10] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  padding-bottom: 1.5em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  padding-top: 1.5em;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  position: relative;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-10 *,
[data-css-10] *,
.css-10 *::before,
[data-css-10] *::before,
.css-10 *::after,
[data-css-10] *::after {
  box-sizing: inherit;
}

.css-10::before,
[data-css-10]::before,
.css-10[data-simulate-before],
[data-css-10][data-simulate-before] {
  border-color: rgba(207,224,252,0.5);
  border-style: solid;
  border-width: 1.5em;
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.css-14,
[data-css-14] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 50%;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-14 *,
[data-css-14] *,
.css-14 *::before,
[data-css-14] *::before,
.css-14 *::after,
[data-css-14] *::after {
  box-sizing: inherit;
}

.css-15,
[data-css-15] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-left: auto;
  margin-right: auto;
  width: 10em;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-15 *,
[data-css-15] *,
.css-15 *::before,
[data-css-15] *::before,
.css-15 *::after,
[data-css-15] *::after {
  box-sizing: inherit;
}

<glamorous(div)>
  <div
    className="css-1"
  >
    <glamorous(Box)>
      <Box
        className="css-4"
        element="div"
      >
        <glamorous(div)
          className="css-4"
          element="div"
        >
          <div
            className="css-5"
          >
            A
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      padding="lg"
    >
      <Box
        className="css-6"
        element="div"
        padding="lg"
      >
        <glamorous(div)
          className="css-6"
          element="div"
          padding="lg"
        >
          <div
            className="css-10"
          >
            B
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      marginRight="50%"
    >
      <Box
        className="css-4"
        element="div"
        marginRight="50%"
      >
        <glamorous(div)
          className="css-4"
          element="div"
          marginRight="50%"
        >
          <div
            className="css-14"
          >
            C
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      marginHorizontal="auto"
      width="10em"
    >
      <Box
        className="css-4"
        element="div"
        marginHorizontal="auto"
        width="10em"
      >
        <glamorous(div)
          className="css-4"
          element="div"
          marginHorizontal="auto"
          width="10em"
        >
          <div
            className="css-15"
          >
            D
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
  </div>
</glamorous(div)>
`;

exports[`Box demo examples height 1`] = `
.css-0,
[data-css-0] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-1,
[data-css-2]::after,
.css-2[data-simulate-after],
[data-css-2][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.css-2 > *:not(:last-child),
[data-css-2] > *:not(:last-child) {
  margin-bottom: 1rem;
  margin-right: 5%;
}

.css-2 > *,
[data-css-2] > * {
  float: left;
  width: 30%;
}

.css-2 > *[class],
[data-css-2] > *[class] {
  margin-bottom: 0;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  height: 10em;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-6 *,
[data-css-6] *,
.css-6 *::before,
[data-css-6] *::before,
.css-6 *::after,
[data-css-6] *::after {
  box-sizing: inherit;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  height: 100px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-7 *,
[data-css-7] *,
.css-7 *::before,
[data-css-7] *::before,
.css-7 *::after,
[data-css-7] *::after {
  box-sizing: inherit;
}

.css-8,
[data-css-8] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  height: 33.33333333333333%;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-8 *,
[data-css-8] *,
.css-8 *::before,
[data-css-8] *::before,
.css-8 *::after,
[data-css-8] *::after {
  box-sizing: inherit;
}

<glamorous(glamorous(div))>
  <div
    className="css-2"
  >
    <glamorous(Box)
      height="10em"
    >
      <Box
        className="css-0"
        element="div"
        height="10em"
      >
        <glamorous(div)
          className="css-0"
          element="div"
          height="10em"
        >
          <div
            className="css-6"
          >
            A
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      height={100}
    >
      <Box
        className="css-0"
        element="div"
        height={100}
      >
        <glamorous(div)
          className="css-0"
          element="div"
          height={100}
        >
          <div
            className="css-7"
          >
            B
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      height={0.3333333333333333}
    >
      <Box
        className="css-0"
        element="div"
        height={0.3333333333333333}
      >
        <glamorous(div)
          className="css-0"
          element="div"
          height={0.3333333333333333}
        >
          <div
            className="css-8"
          >
            C
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
  </div>
</glamorous(glamorous(div))>
`;

exports[`Box demo examples inline 1`] = `
.css-0,
[data-css-1]::after,
.css-1[data-simulate-after],
[data-css-1][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.css-1 > *:not(:last-child),
[data-css-1] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.css-1 > *[class],
[data-css-1] > *[class] {
  margin-bottom: 0;
}

.css-5,
[data-css-5] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-6 *,
[data-css-6] *,
.css-6 *::before,
[data-css-6] *::before,
.css-6 *::after,
[data-css-6] *::after {
  box-sizing: inherit;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  width: 100px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-7 *,
[data-css-7] *,
.css-7 *::before,
[data-css-7] *::before,
.css-7 *::after,
[data-css-7] *::after {
  box-sizing: inherit;
}

<glamorous(glamorous(div))>
  <div
    className="css-1"
  >
    <glamorous(Box)
      inline={true}
    >
      <Box
        className="css-5"
        element="div"
        inline={true}
      >
        <glamorous(div)
          className="css-5"
          element="div"
          inline={true}
        >
          <div
            className="css-6"
          >
            A
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      inline={true}
      width={100}
    >
      <Box
        className="css-5"
        element="div"
        inline={true}
        width={100}
      >
        <glamorous(div)
          className="css-5"
          element="div"
          inline={true}
          width={100}
        >
          <div
            className="css-7"
          >
            B
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      inline={true}
    >
      <Box
        className="css-5"
        element="div"
        inline={true}
      >
        <glamorous(div)
          className="css-5"
          element="div"
          inline={true}
        >
          <div
            className="css-6"
          >
            C
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
  </div>
</glamorous(glamorous(div))>
`;

exports[`Box demo examples precedence 1`] = `
.css-0,
[data-css-0] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 10px;
  margin-left: 30px;
  margin-right: 20px;
  margin-top: 10px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 30px;
  margin-top: 10px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-2 *,
[data-css-2] *,
.css-2 *::before,
[data-css-2] *::before,
.css-2 *::after,
[data-css-2] *::after {
  box-sizing: inherit;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 10px;
  margin-left: 40px;
  margin-right: 20px;
  margin-top: 10px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-3 *,
[data-css-3] *,
.css-3 *::before,
[data-css-3] *::before,
.css-3 *::after,
[data-css-3] *::after {
  box-sizing: inherit;
}

.css-4,
[data-css-4] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 40px;
  margin-top: 10px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-4 *,
[data-css-4] *,
.css-4 *::before,
[data-css-4] *::before,
.css-4 *::after,
[data-css-4] *::after {
  box-sizing: inherit;
}

.css-5,
[data-css-5] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 20px;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 40px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5 *,
[data-css-5] *,
.css-5 *::before,
[data-css-5] *::before,
.css-5 *::after,
[data-css-5] *::after {
  box-sizing: inherit;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 40px;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 20px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-6 *,
[data-css-6] *,
.css-6 *::before,
[data-css-6] *::before,
.css-6 *::after,
[data-css-6] *::after {
  box-sizing: inherit;
}

<div>
  <glamorous(Box)
    margin={10}
    marginHorizontal={20}
    marginStart={30}
  >
    <Box
      className="css-0"
      element="div"
      margin={10}
      marginHorizontal={20}
      marginStart={30}
    >
      <glamorous(div)
        className="css-0"
        element="div"
        margin={10}
        marginHorizontal={20}
        marginStart={30}
      >
        <div
          className="css-1"
        >
          10 20 10 30
        </div>
      </glamorous(div)>
    </Box>
  </glamorous(Box)>
  <glamorous(Box)
    margin={10}
    marginEnd={30}
    marginHorizontal={20}
  >
    <Box
      className="css-0"
      element="div"
      margin={10}
      marginEnd={30}
      marginHorizontal={20}
    >
      <glamorous(div)
        className="css-0"
        element="div"
        margin={10}
        marginEnd={30}
        marginHorizontal={20}
      >
        <div
          className="css-2"
        >
          10 30 10 20
        </div>
      </glamorous(div)>
    </Box>
  </glamorous(Box)>
  <glamorous(Box)
    margin={10}
    marginHorizontal={20}
    marginLeft={40}
    marginStart={30}
  >
    <Box
      className="css-0"
      element="div"
      margin={10}
      marginHorizontal={20}
      marginLeft={40}
      marginStart={30}
    >
      <glamorous(div)
        className="css-0"
        element="div"
        margin={10}
        marginHorizontal={20}
        marginLeft={40}
        marginStart={30}
      >
        <div
          className="css-3"
        >
          10 20 10 40
        </div>
      </glamorous(div)>
    </Box>
  </glamorous(Box)>
  <glamorous(Box)
    margin={10}
    marginEnd={30}
    marginHorizontal={20}
    marginRight={40}
  >
    <Box
      className="css-0"
      element="div"
      margin={10}
      marginEnd={30}
      marginHorizontal={20}
      marginRight={40}
    >
      <glamorous(div)
        className="css-0"
        element="div"
        margin={10}
        marginEnd={30}
        marginHorizontal={20}
        marginRight={40}
      >
        <div
          className="css-4"
        >
          10 40 10 20
        </div>
      </glamorous(div)>
    </Box>
  </glamorous(Box)>
  <glamorous(Box)
    margin={10}
    marginTop={40}
    marginVertical={20}
  >
    <Box
      className="css-0"
      element="div"
      margin={10}
      marginTop={40}
      marginVertical={20}
    >
      <glamorous(div)
        className="css-0"
        element="div"
        margin={10}
        marginTop={40}
        marginVertical={20}
      >
        <div
          className="css-5"
        >
          40 10 20 10
        </div>
      </glamorous(div)>
    </Box>
  </glamorous(Box)>
  <glamorous(Box)
    margin={10}
    marginBottom={40}
    marginVertical={20}
  >
    <Box
      className="css-0"
      element="div"
      margin={10}
      marginBottom={40}
      marginVertical={20}
    >
      <glamorous(div)
        className="css-0"
        element="div"
        margin={10}
        marginBottom={40}
        marginVertical={20}
      >
        <div
          className="css-6"
        >
          20 10 40 10
        </div>
      </glamorous(div)>
    </Box>
  </glamorous(Box)>
</div>
`;

exports[`Box demo examples responsive 1`] = `
.css-0,
[data-css-0] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 50px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-1 *,
[data-css-1] *,
.css-1 *::before,
[data-css-1] *::before,
.css-1 *::after,
[data-css-1] *::after {
  box-sizing: inherit;
}

@media (min-width: 800px) and (max-width: 1023px) {
  .css-1,
  [data-css-1] {
    margin-right: 100px;
  }
}

@media (min-width: 1024px) {
  .css-1,
  [data-css-1] {
    margin-right: 150px;
  }
}

<glamorous(Box)
  breakpoints={
    Array [
      800,
      "wide",
    ]
  }
  marginRight={
    Array [
      50,
      100,
      150,
    ]
  }
>
  <Box
    breakpoints={
      Array [
        800,
        "wide",
      ]
    }
    className="css-0"
    element="div"
    marginRight={
      Array [
        50,
        100,
        150,
      ]
    }
  >
    <glamorous(div)
      breakpoints={
        Array [
          800,
          "wide",
        ]
      }
      className="css-0"
      element="div"
      marginRight={
        Array [
          50,
          100,
          150,
        ]
      }
    >
      <div
        className="css-1"
      >
        A
      </div>
    </glamorous(div)>
  </Box>
</glamorous(Box)>
`;

exports[`Box demo examples rtl 1`] = `
.css-0,
[data-css-1]::after,
.css-1[data-simulate-after],
[data-css-1][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.css-1 > *:not(:last-child),
[data-css-1] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.css-4,
[data-css-4] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5,
[data-css-5] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-left: 1.5em;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5 *,
[data-css-5] *,
.css-5 *::before,
[data-css-5] *::before,
.css-5 *::after,
[data-css-5] *::after {
  box-sizing: inherit;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 1.5em;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-6 *,
[data-css-6] *,
.css-6 *::before,
[data-css-6] *::before,
.css-6 *::after,
[data-css-6] *::after {
  box-sizing: inherit;
}

<div
  dir="rtl"
>
  <ThemeProvider>
    <ThemeProvider>
      <glamorous(div)>
        <div
          className="css-1"
        >
          <glamorous(Box)
            marginLeft="lg"
          >
            <Box
              className="css-4"
              element="div"
              marginLeft="lg"
            >
              <glamorous(div)
                className="css-4"
                element="div"
                marginLeft="lg"
              >
                <div
                  className="css-5"
                >
                  اليسار
                </div>
              </glamorous(div)>
            </Box>
          </glamorous(Box)>
          <glamorous(Box)
            marginStart="lg"
          >
            <Box
              className="css-4"
              element="div"
              marginStart="lg"
            >
              <glamorous(div)
                className="css-4"
                element="div"
                marginStart="lg"
              >
                <div
                  className="css-6"
                >
                  بداية
                </div>
              </glamorous(div)>
            </Box>
          </glamorous(Box)>
          <glamorous(Box)
            marginEnd="lg"
          >
            <Box
              className="css-4"
              element="div"
              marginEnd="lg"
            >
              <glamorous(div)
                className="css-4"
                element="div"
                marginEnd="lg"
              >
                <div
                  className="css-5"
                >
                  النهاية
                </div>
              </glamorous(div)>
            </Box>
          </glamorous(Box)>
        </div>
      </glamorous(div)>
    </ThemeProvider>
  </ThemeProvider>
</div>
`;

exports[`Box demo examples spacing 1`] = `
.css-0,
[data-css-1]::after,
.css-1[data-simulate-after],
[data-css-1][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.css-1 > *:not(:last-child),
[data-css-1] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.css-4,
[data-css-4] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5,
[data-css-5] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5 *,
[data-css-5] *,
.css-5 *::before,
[data-css-5] *::before,
.css-5 *::after,
[data-css-5] *::after {
  box-sizing: inherit;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 2em;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-6 *,
[data-css-6] *,
.css-6 *::before,
[data-css-6] *::before,
.css-6 *::after,
[data-css-6] *::after {
  box-sizing: inherit;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 6em;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-7 *,
[data-css-7] *,
.css-7 *::before,
[data-css-7] *::before,
.css-7 *::after,
[data-css-7] *::after {
  box-sizing: inherit;
}

.css-8,
[data-css-8] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 120px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-8 *,
[data-css-8] *,
.css-8 *::before,
[data-css-8] *::before,
.css-8 *::after,
[data-css-8] *::after {
  box-sizing: inherit;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-right: 33.33333333333333%;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-9 *,
[data-css-9] *,
.css-9 *::before,
[data-css-9] *::before,
.css-9 *::after,
[data-css-9] *::after {
  box-sizing: inherit;
}

<glamorous(div)>
  <div
    className="css-1"
  >
    <glamorous(Box)>
      <Box
        className="css-4"
        element="div"
      >
        <glamorous(div)
          className="css-4"
          element="div"
        >
          <div
            className="css-5"
          >
            none
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      marginRight="xl"
    >
      <Box
        className="css-4"
        element="div"
        marginRight="xl"
      >
        <glamorous(div)
          className="css-4"
          element="div"
          marginRight="xl"
        >
          <div
            className="css-6"
          >
            xl
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      marginRight="6em"
    >
      <Box
        className="css-4"
        element="div"
        marginRight="6em"
      >
        <glamorous(div)
          className="css-4"
          element="div"
          marginRight="6em"
        >
          <div
            className="css-7"
          >
            6em
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      marginRight={120}
    >
      <Box
        className="css-4"
        element="div"
        marginRight={120}
      >
        <glamorous(div)
          className="css-4"
          element="div"
          marginRight={120}
        >
          <div
            className="css-8"
          >
            120
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      marginRight={0.3333333333333333}
    >
      <Box
        className="css-4"
        element="div"
        marginRight={0.3333333333333333}
      >
        <glamorous(div)
          className="css-4"
          element="div"
          marginRight={0.3333333333333333}
        >
          <div
            className="css-9"
          >
            1/3
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
  </div>
</glamorous(div)>
`;

exports[`Box demo examples width 1`] = `
.css-0,
[data-css-1]::after,
.css-1[data-simulate-after],
[data-css-1][data-simulate-after] {
  clear: both;
  content: "";
  display: table;
}

.css-1 > *:not(:last-child),
[data-css-1] > *:not(:last-child) {
  margin-bottom: 1rem;
}

.css-4,
[data-css-4] {
  align-items: center;
  background-color: #f0f5fc;
  color: #1d5bbf;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  outline: 1px solid #cfe0fc;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5,
[data-css-5] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 10em;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-5 *,
[data-css-5] *,
.css-5 *::before,
[data-css-5] *::before,
.css-5 *::after,
[data-css-5] *::after {
  box-sizing: inherit;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100px;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-6 *,
[data-css-6] *,
.css-6 *::before,
[data-css-6] *::before,
.css-6 *::after,
[data-css-6] *::after {
  box-sizing: inherit;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  color: #1d5bbf;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 1px solid #cfe0fc;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 33.33333333333333%;
  align-items: center;
  background-color: #f0f5fc;
  justify-content: center;
  padding: 0.5em;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-7 *,
[data-css-7] *,
.css-7 *::before,
[data-css-7] *::before,
.css-7 *::after,
[data-css-7] *::after {
  box-sizing: inherit;
}

<glamorous(div)>
  <div
    className="css-1"
  >
    <glamorous(Box)
      width="10em"
    >
      <Box
        className="css-4"
        element="div"
        width="10em"
      >
        <glamorous(div)
          className="css-4"
          element="div"
          width="10em"
        >
          <div
            className="css-5"
          >
            A
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      width={100}
    >
      <Box
        className="css-4"
        element="div"
        width={100}
      >
        <glamorous(div)
          className="css-4"
          element="div"
          width={100}
        >
          <div
            className="css-6"
          >
            B
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
    <glamorous(Box)
      width={0.3333333333333333}
    >
      <Box
        className="css-4"
        element="div"
        width={0.3333333333333333}
      >
        <glamorous(div)
          className="css-4"
          element="div"
          width={0.3333333333333333}
        >
          <div
            className="css-7"
          >
            C
          </div>
        </glamorous(div)>
      </Box>
    </glamorous(Box)>
  </div>
</glamorous(div)>
`;
